feat: added first draft for Spring Bridge