@@ -20,50 +20,49 @@ limitations under the License.
  * #L%
  */
 
+import com.koch.ambeth.log.ILogger;
+import com.koch.ambeth.log.LogInstance;
+import com.koch.ambeth.util.collections.ArrayList;
+import com.koch.ambeth.util.exception.RuntimeExceptionUtil;
+
 import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.file.Path;
+import java.util.List;
 import java.util.regex.Pattern;
 
-import com.koch.ambeth.log.ILogger;
-import com.koch.ambeth.log.LogInstance;
-import com.koch.ambeth.util.collections.ArrayList;
-import com.koch.ambeth.util.collections.IList;
-import com.koch.ambeth.util.exception.RuntimeExceptionUtil;
-
 public class SystemClasspathInfo implements IClasspathInfo {
-	@LogInstance
-	private ILogger log;
+    @LogInstance
+    private ILogger log;
 
-	@Override
-	public IList<URL> getJarURLs() {
-		ArrayList<URL> urls = new ArrayList<>();
+    @Override
+    public List<URL> getJarURLs() {
+        ArrayList<URL> urls = new ArrayList<>();
 
-		String cpString = System.getProperty("java.class.path");
-		String separator = System.getProperty("path.separator");
-		String[] cpItems = cpString.split(Pattern.quote(separator));
+        String cpString = System.getProperty("java.class.path");
+        String separator = System.getProperty("path.separator");
+        String[] cpItems = cpString.split(Pattern.quote(separator));
 
-		if (log != null && log.isDebugEnabled()) {
-			log.debug("Classpath: " + cpString);
-		}
+        if (log != null && log.isDebugEnabled()) {
+            log.debug("Classpath: " + cpString);
+        }
 
-		for (int a = 0, size = cpItems.length; a < size; a++) {
-			try {
-				URL url = new File(cpItems[a]).toURI().toURL();
-				// URL url = new URL("file://" + cpItems[a]);
-				urls.add(url);
-			}
-			catch (MalformedURLException e) {
-				throw RuntimeExceptionUtil.mask(e, cpItems[a]);
-			}
-		}
+        for (int a = 0, size = cpItems.length; a < size; a++) {
+            try {
+                URL url = new File(cpItems[a]).toURI().toURL();
+                // URL url = new URL("file://" + cpItems[a]);
+                urls.add(url);
+            } catch (MalformedURLException e) {
+                throw RuntimeExceptionUtil.mask(e, cpItems[a]);
+            }
+        }
 
-		return urls;
-	}
+        return urls;
+    }
 
-	@Override
-	public Path openAsFile(URL url) throws Exception {
-		return new File(url.getFile()).getAbsoluteFile().toPath();
-	}
+    @Override
+    public Path openAsFile(URL url) throws Exception {
+        return new File(url.getFile()).getAbsoluteFile().toPath();
+    }
 }
